fix: :bug: Fix spacing some sections

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -402,6 +402,9 @@
                 margin-top: 6rem;
             }
     
+            .custom-title {
+                padding: 1.1rem;
+            }
         }
     }
 
@@ -453,6 +456,10 @@
         @media screen and (min-width: 1000px) {
             margin-left: 2rem;
         }
+
+        &--limitations {
+            margin-left: 1rem;
+        }
     }
 
     &__sublist {
@@ -492,10 +499,36 @@
     &--tabs {
         [role=tablist] {
             max-width: fit-content;
+            background-color: transparent;
+            padding: 0;
+            border-radius: 0;
+            li {
+                background-color: $color-bright-gray;
+                margin: 0;
+                padding-top: 0.3125rem;
+                padding-right: 0.9375rem;
+                padding-bottom: 0.3125rem;
+                padding-left: 0.9375rem;
+                height: 3rem;
+                &:first-child {
+                    border-radius: 5rem 0 0 5rem;
+                }
+                &:last-child {
+                    border-radius: 0 5rem 5rem 0;
+                    margin-right: 1rem;
+                }
+            }
         }
+
+        
 
         [role=tablist] a {
             width: 9rem;
+        }
+        &-menu {
+            width: 100%;
+            background-color: transparent;
+            margin-right: 1rem;
         }
     }
 
@@ -688,10 +721,10 @@
         }
 
         &--list {
-            margin: 1rem 0 1rem 0;
+            margin: 1rem 0 1rem 1rem;
 
             @media screen and (min-width: 1000px) {
-                margin: 1rem 0 2rem 0;
+                margin: 1rem 0 2rem 1rem;
             }
         }
 
